[metadata]
name = acars2sbs
version = 0.0.1
author = Rafael Avila
author_email = rafael.avila@gmail.com
description = Converts ACARS messages to SBS (basestation).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rbavila/acars2sbs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    acars2sbs = acars2sbs
packages = acars2sbs
python_requires = >=3.5

[options.entry_points]
console_scripts =
    acars2sbs = acars2sbs.app:main
